Added functions, options, and fixed bugs

--- a/changelog
+++ b/changelog
@@ -1,2 +1,6 @@
 # 0.0.1: Thu 12 Mar 2020 13:49:06 AEDT
 # Initial version
+# 0.0.2: Thu 12 Mar 2020 14:39:50 AEDT
+# Added function capability 
+# 0.0.3: Thu 12 Mar 15:26:35 AEDT 2020
+# Fixed bugs
