--- a/changelog
+++ b/changelog
@@ -6,3 +6,5 @@
 # Fixed bugs
 # 0.0.4: Thu 12 Mar 19:00:35 AEDT 2020
 # Improved whitelist handling and add verbose option
+# 0.0.5: Thu 12 Mar 19:13:24 AEDT 2020
+# Fixed file import
