--- a/changelog
+++ b/changelog
@@ -8,3 +8,5 @@
 # Improved whitelist handling and add verbose option
 # 0.0.5: Thu 12 Mar 19:13:24 AEDT 2020
 # Fixed file import
+# 0.0.6: Thu 12 Mar 2020 19:24:29 AEDT
+# Improved whitelist file check
